<resources>
    <string name="app_name" translatable="false">Family Tree</string>
    <string name="tagline">Create your own family tree</string>
    <string name="delete">Delete</string>
    <string name="sure_delete">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="change_date">Change date</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="cant_understand_uri">Could not understand the received URI.</string>
    <string name="version_name">Version %s</string>
    <string name="make_default">Main submitter</string>
    <string name="citations">Citations</string>
    <string name="sources_number">Number of sources</string>
    <string name="extension">Extension</string>
    <string name="new_family_of">New family of %s</string>
    <string name="existing_family">Already existing family</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="revert">Undo changes</string>
    <string name="trees">Trees</string>
    <string name="diagram">Diagram</string>
    <string name="media">Media</string>
    <string name="sources">Sources</string>
    <string name="notes">Notes</string>
    <string name="families">Families</string>
    <string name="repositories">Repositories</string>
    <string name="submitters">Submitters</string>
    <string name="new_tree">New tree</string>
    <string name="download_shared_tree">Download the shared tree</string>
    <string name="empty_tree">Start an empty tree</string>
    <string name="download_example">Download an example</string>
    <string name="import_gedcom">Import a GEDCOM file</string>
    <string name="import_backup">Recover a ZIP backup</string>
    <string name="modify_later">Later you can edit it.</string>
    <string name="name_of_tree">Title of tree</string>
    <string name="create">Create</string>
    <string name="tree_created">New tree created.</string>
    <string name="complex_tree_advanced_tools">This tree looks quite complex.\nTo better manage it, do you want to show advanced tools?</string>
    <string name="tree_imported_ok">Tree successfully imported.</string>
    <string name="backup_invalid">This backup is invalid.</string>
    <string name="invalid_gedcom">Invalid GEDCOM.</string>
    <string name="tree">Tree</string>
    <string name="simpsons_tree">The Simpsons Family Tree</string>
    <string name="family_gem_example">Family Gem example</string>
    <string name="a_new_tree">A new family tree</string>
    <string name="you_can_download">You can now download the tree shared with you.</string>
    <string name="download">Download</string>
    <string name="tap_add_tree">Tap to add a family tree.</string>
    <string name="persons">Persons</string>
    <string name="generation">Generation</string>
    <string name="generations">Generations</string>
    <string name="no_useful_data">Can\'t get useful data.</string>
    <string name="make_backup">Save ZIP backup</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="not_memory_tree">Not enough memory for this tree.</string>
    <string name="tree_info">Info</string>
    <string name="rename">Rename</string>
    <string name="find_errors">Find errors</string>
    <string name="share_tree">Share</string>
    <string name="compare">Compare</string>
    <string name="export_gedcom">Export GEDCOM</string>
    <string name="gedcom_exported_ok">GEDCOM exported.</string>
    <string name="zip_exported_ok">ZIP exported.</string>
    <string name="no_results">No results.</string>
    <string name="really_delete_tree">Really want to delete this tree?</string>
    <string name="all_ok">Everything is OK.</string>
    <string name="errors_found">%d errors found.</string>
    <string name="correct">Correct</string>
    <string name="settings">Settings</string>
    <string name="auto_save">Auto save</string>
    <string name="load_tree_startup">Load last opened tree at startup</string>
    <string name="show_advanced_functions">Show advanced tools</string>
    <string name="system_language">System language</string>
    <string name="about">About</string>
    <string name="item_exists_but_file">The tree entry is in the index, but for some reason the related file is missing:</string>
    <string name="root">Root</string>
    <string name="shares">Shares</string>
    <string name="refresh">Refresh</string>
    <string name="header">Header</string>
    <string name="create_header">Create header</string>
    <string name="update_header">Update header</string>
    <string name="file">File</string>
    <string name="characrter_set">Charset</string>
    <string name="version">Version</string>
    <string name="language">Language</string>
    <string name="copyright">Copyright</string>
    <string name="software">Software</string>
    <string name="corporation">Corporation</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="date">Date</string>
    <string name="submitter">Submitter</string>
    <string name="submission">Submission</string>
    <string name="gedcom" translatable="false">GEDCOM</string>
    <string name="form">Form</string>
    <string name="destination">Destination</string>
    <string name="time">Time</string>
    <string name="media_folders">Media folders</string>
    <string name="media_searched_list">Media files are searched inside these folders:</string>
    <string name="app_storage">App storage</string>
    <string name="add_device_folder">Add a folder from this device.</string>
    <string name="share_sensitive">Sharing sensitive data</string>
    <string name="aware_upload_server">Please be aware that you are going to upload the whole tree to a server online.</string>
    <string name="remind_later">Remind me later</string>
    <string name="please_title">Please write a title.</string>
    <string name="please_name">Please write a name.</string>
    <string name="ideally_recipient">Ideally the recipient of the sharing.</string>
    <string name="changes_submitter">Submitter of changes</string>
    <string name="usually_your_name">Usually your name and surname.</string>
    <string name="allow_developer_access">Allow the app developer to access the shared tree</string>
    <string name="correctly_uploaded">Tree successfully uploaded.</string>
    <string name="sharing_tree">Sharing a family tree</string>
    <string name="click_this_link">Click this link to see my family tree: %s</string>
    <string name="share_with">Share with</string>
    <string name="sharing_completed">Share completed.</string>
    <string name="tree_with_news">Tree with updates</string>
    <string name="tree_without_news">Tree without updates</string>
    <string name="tree_news_imported">The old tree above can receive %d updates from the imported tree:</string>
    <string name="sent_by">Sent by %s</string>
    <string name="shared_medias">Shared media</string>
    <string name="view_updates">Review singly</string>
    <string name="accept_all">Accept all</string>
    <string name="delete_imported_tree">Delete imported tree</string>
    <string name="one_update_choice">One update needs a choice</string>
    <string name="many_updates_choice">%d updates need a choice</string>
    <string name="updates_replace_add">You have to choose whether the updates should replace existing items or be added as new items.</string>
    <string name="import_news">Import update</string>
    <string name="person">Person</string>
    <string name="add">Add</string>
    <string name="replace">Replace</string>
    <string name="ignore">Skip</string>
    <string name="confirm_news">Confirm updates</string>
    <string name="accepted_news">You accepted %d updates:\n\t%d additions\n\t%d replacements\n\t%d deletions</string>
    <string name="confirm">Confirm</string>
    <string name="all_imported_delete">All updates have been imported.\nDo you want to delete the imported tree?</string>
    <string name="birthdays">Birthdays</string>
    <string name="birthday_notified_midday">The birthday of each person will be notified at midday.</string>
    <string name="turns_years_old">%s turns %d years old today.</string>
    <string name="new_person">Add the first person.</string>
    <string name="card">Profile</string>
    <string name="family_as_child">Family (as child)</string>
    <string name="family_as_spouse">Family (as spouse)</string>
    <string name="family_as">Family (as %s)</string>
    <string name="new_relative">Link new person</string>
    <string name="link_person">Link existing person</string>
    <string name="modify">Edit</string>
    <string name="unlink">Unlink</string>
    <string name="long_press_menu">Long press to display the menu.\nTap to open the profile.</string>
    <string name="export_pdf">Export PDF</string>
    <string name="pdf_exported_ok">PDF exported.</string>
    <string name="diagram_settings">Diagram settings</string>
    <string name="generations_display_diagram">Set how many generations display in the diagram:</string>
    <string name="ancestors">Ancestors</string>
    <string name="uncles_great_uncles">Uncles and great-uncles</string>
    <string name="partners">Partners</string>
    <string name="descendants">Descendants</string>
    <string name="siblings_nephews">Siblings and nephews</string>
    <string name="uncles_cousins">Uncles and cousins</string>
    <string name="order_by">Sort by</string>
    <string name="id">ID</string>
    <string name="surname">Surname</string>
    <string name="year">Year</string>
    <string name="age">Age</string>
    <string name="number_relatives">Number of relatives</string>
    <string name="really_delete_person">Really want to delete this person?</string>
    <string name="person_deleted">Person deleted.</string>
    <string name="events">Facts</string>
    <string name="relatives">Relatives</string>
    <string name="make_root">Set as root</string>
    <string name="this_is_root">%s is the main person of tree.</string>
    <string name="new_media">New media</string>
    <string name="new_shared_media">New shared media</string>
    <string name="link_shared_media">Link shared media</string>
    <string name="name">Name</string>
    <string name="yes">Yes</string>
    <string name="sex">Sex</string>
    <string name="event">Event</string>
    <string name="birth">Birth</string>
    <string name="baptism">Baptism</string>
    <string name="residence">Residence</string>
    <string name="occupation">Occupation</string>
    <string name="death">Death</string>
    <string name="burial">Burial</string>
    <string name="other">Other</string>
    <string name="note">Note</string>
    <string name="new_note">New note</string>
    <string name="new_shared_note">New shared note</string>
    <string name="link_shared_note">Link shared note</string>
    <string name="source">Source</string>
    <string name="new_source_note">New note-source</string>
    <string name="new_source">New source</string>
    <string name="link_source">Link source</string>
    <string name="primary_media">Primary media</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="move_before">Move before</string>
    <string name="move_after">Move after</string>
    <string name="parent">Parent</string>
    <string name="title">Title</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="rate">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share App</string>
    <string name="family_tree_premium">Family Tree Premium</string>
    <string name="more_premium">More about Premium</string>
    <string name="get_premium">Get Premium</string>
</resources>