<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorSecondaryContainer" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/share_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTheme.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/condividi_titolo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/share_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/root" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/AppTheme.Suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ideally_recipient" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/share_submitter_title"
                    style="@style/AppTheme.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submitter" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/AppTheme.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usually_your_name" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/condividi_autore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="20sp" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/condividi_allow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/share_sensitive" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:minWidth="200dp"
                    android:text="@string/share_tree" />

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/share_wheel"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>
</LinearLayout>