<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/product_background"
    android:gravity="center_horizontal"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="16dp"
    android:paddingEnd="20dp"
    android:paddingBottom="35dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal"
        android:text="@string/family_tree_premium"
        android:textColor="@color/gray_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/product_wheel"
        android:layout_width="50dp"
        android:layout_height="80dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/product_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center_horizontal"
            android:text="2.00"
            android:textColor="@color/gray_text"
            android:textSize="35sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_lifetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lifetime"
            android:textAllCaps="true"
            android:textColor="@color/gray_text" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/product_more"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/more_premium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:minWidth="200dp"
        android:text="@string/get_premium" />
</LinearLayout>
